# rsapps

./: .dockerignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml  docker-postgres-init.sql
.github/workflows/: pull_request.yml
commons/: Cargo.toml
webserver/: Cargo.toml  DESIGN.md  Dockerfile  README.md  sqlx-data.json
webserver/migrations/: 20201231115500_create-users.sql
webserver/src/: auth.rs  main.rs
webserver/src/domains/: errors.rs  mod.rs
webserver/src/domains/entities/: context.rs  mod.rs  todo.rs  user.rs
webserver/src/domains/repositories/: todo_repository.rs  user_repository.rs
webserver/src/gql/: mod.rs  mutation.rs  query.rs  schema.rs  user_resolver.rs
webserver/src/infrastructures/: bootstrap.rs  database.rs  di_container.rs  mod.rs
webserver/src/infrastructures/gql/: schema.rs
webserver/src/infrastructures/repositories/: mod.rs  todo_repository.rs  user_repository.rs
webserver/src/services/: todo_service.rs  user_service.rs
webserver/tests/infrastructures/repositories/: todo_repository.rs
yewapp/: Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
yewapp/gql/: schema.json
yewapp/src/: main.rs  utils.rs
yewapp/src/login/: gql.rs  mod.rs
yewapp/src/todo/: gql.rs  mod.rs
