[package]
authors = ["Koichiro Okamoto <koichirookamoto@icloud.com>"]
edition = "2018"
name = "rsapps-webserver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.8.0", features = ["attributes"]}
bcrypt = "0.9"
chrono = "0.4"
juniper = "0.15"
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.4", features = ["postgres", "runtime-async-std-native-tls", "chrono"]}
strum = {version = "0.20", features = ["derive"]}
tide = "0.15"
